force-app/main/default/objects/PartnerTierRuleVersion__c/PartnerTierRuleVersion__c.object-meta.xml
<CustomObject>
    <description>Versioned partner tier qualification rule header record.</description>
    <label>Partner Tier Rule Version</label>
    <nameField>
        <displayFormat>PTRV-{00000}</displayFormat>
        <label>Rule Version Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Partner Tier Rule Versions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>