force-app/main/default/objects/PartnerTierRuleVersion__c/fields/Deactivation_Date__c.field-meta.xml
<CustomField>
    <fullName>Deactivation_Date__c</fullName>
    <description>Optional date this version should stop being used.</description>
    <label>Deactivation Date</label>
    <type>Date</type>
</CustomField>