force-app/main/default/objects/PartnerTierRuleVersion__c/fields/In_Effect_Date__c.field-meta.xml
<CustomField>
    <fullName>In_Effect_Date__c</fullName>
    <description>Date this rule version becomes active for evaluation.</description>
    <label>In Effect Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>