force-app/main/default/objects/PartnerTierRuleVersion__c/fields/Is_Points_Only__c.field-meta.xml
<CustomField>
    <fullName>Is_Points_Only__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When true, only points threshold is evaluated for this rule version.</description>
    <label>Is Points Only</label>
    <type>Checkbox</type>
</CustomField>