force-app/main/default/objects/PartnerTierRuleVersion__c/fields/LoyaltyProgram__c.field-meta.xml
<CustomField>
    <fullName>LoyaltyProgram__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Loyalty program this tier rule version belongs to.</description>
    <label>Loyalty Program</label>
    <referenceTo>LoyaltyProgram</referenceTo>
    <relationshipLabel>Partner Tier Rule Versions</relationshipLabel>
    <relationshipName>Partner_Tier_Rule_Versions</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>