force-app/main/default/objects/PartnerTierRuleVersion__c/fields/Min_Points__c.field-meta.xml
<CustomField>
    <fullName>Min_Points__c</fullName>
    <description>Minimum cumulative points threshold for this rule version.</description>
    <label>Minimum Points</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>