force-app/main/default/objects/PartnerTierRuleVersion__c/fields/Tier__c.field-meta.xml
<CustomField>
    <fullName>Tier__c</fullName>
    <description>Target partner tier.</description>
    <label>Tier</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Unaffiliated</fullName>
            </value>
            <value>
                <fullName>Ready</fullName>
                <default>true</default>
                <label>Ready</label>
            </value>
            <value>
                <fullName>Advanced</fullName>
            </value>
            <value>
                <fullName>Premier</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>