force-app/main/default/objects/PartnerTierRuleVersion__c/fields/Tier_Rank__c.field-meta.xml
<CustomField>
    <fullName>Tier_Rank__c</fullName>
    <description>Numeric sort rank for high-watermark comparison.</description>
    <label>Tier Rank</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>