force-app/main/default/objects/PartnerTierRuleVersion__c/fields/Version_Label__c.field-meta.xml
<CustomField>
    <fullName>Version_Label__c</fullName>
    <description>Business-friendly label for release version.</description>
    <label>Version Label</label>
    <length>80</length>
    <type>Text</type>
</CustomField>