force-app/main/default/objects/PartnerTierRuleVersion__c/validationRules/Active_Requires_Effective_Window.validationRule-meta.xml
<ValidationRule>
    <fullName>Active_Requires_Effective_Window</fullName>
    <active>false</active>
    <description>Active versions must define both in-effect and deactivation dates.</description>
    <errorConditionFormula>
        AND(
            ISPICKVAL(Status__c, "Active"),
            OR(
                ISBLANK(In_Effect_Date__c),
                ISBLANK(Deactivation_Date__c)
            )
        )
    </errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>To release a version, set both In Effect Date and Deactivation Date.</errorMessage>
</ValidationRule>