force-app/main/default/objects/PartnerTierRuleVersion__c/validationRules/Valid_Deactivation_Window.validationRule-meta.xml
<ValidationRule>
    <fullName>Valid_Deactivation_Window</fullName>
    <active>false</active>
    <description>Deactivation date must not be before in-effect date.</description>
    <errorConditionFormula>
        AND(
            NOT(ISBLANK(Deactivation_Date__c)),
            Deactivation_Date__c &lt; In_Effect_Date__c
        )
    </errorConditionFormula>
    <errorDisplayField>Deactivation_Date__c</errorDisplayField>
    <errorMessage>Deactivation Date must be on or after In Effect Date.</errorMessage>
</ValidationRule>